# ncnn-llm-mcp-sdimggen

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: ci.yml
include/: decoder_slover.h  diffusion_slover.h  getmem.h  ncnn_thread_config.h  prompt_slover.h
src/: decoder_slover.cpp  diffusion_slover.cpp  mcp_stdio_server.cpp  opencv-mobile_ncnn-demo.cpp  prompt_slover.cpp
